Penguin head rotation now fixed, item rotation still needs pitch fixed. Penguins now only pick up their breeding items (fish)